# cloudDisk_CPP

./: .gitignore  CMakeLists.txt  README.md
doc/: c++11并发编程.md  gtest_SimpleGuide.md  设计思路.md
src/: CMakeLists.txt
src/app/client/: CmakeLists.txt
src/app/server/: CmakeLists.txt
src/framework/: CMakeLists.txt  FrameWorkGlobal.h  Global.h  Plugin.cpp  PluginInterface.h  PluginLoader.cpp  PluginLoader.h  Singleton.h
src/framework/Comman/: ConfigObject.h  Env.h  NonCopyable.h  Singleton.h
src/framework/threadPoll/: SafeQueue.h  ThreadPoll.cpp  ThreadPoll.h
src/log/: CMakeLists.txt  LogGlobal.h  LogInstance.cpp  LogInstance.h  logForAll.cpp  logForAll.h
test/: CMakeLists.txt
